creds + fix z-index for Pomona-Pitzer tick

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -67,6 +67,7 @@ p, h3, h2 {
 
 			li.school-wrapper {
 				div.tick {
+					z-index: 1;
 					width: 25px;
 					height: 25px;
 					position: absolute;
@@ -85,6 +86,8 @@ p, h3, h2 {
 				height: 60px;
 				padding-right: $tick-gap;
 				div.school {
+					position: relative;
+					z-index: 2;
 					.record {
 						color: $color4;
 					}
@@ -237,6 +240,15 @@ p, h3, h2 {
 			&.right {
 				float: right;
 			}
+		}
+	}
+
+	footer {
+		color: gray;
+		a {
+			text-decoration: none;
+			color: gray;
+			font-weight: 700;
 		}
 	}
 }
